--- a/faculty.html
+++ b/faculty.html
@@ -19,6 +19,7 @@
         <h3 class="the-cursor" onClick="javascript:location.href = 'index.html';">Home Page</h3>
         <h3 class="the-cursor" onClick="javascript:location.href = 'faculty.html';">Faculty</h3>
         <h3 class="the-cursor" onClick="javascript:location.href = 'resources.html';">Resources</h3>
+        <h3 class="the-cursor" onClick="javascript:location.href = 'apply.html';">Application</h3>
       </div>
       <div class="middle-container">
 
