--- a/resources.html
+++ b/resources.html
@@ -16,6 +16,7 @@
         <h3 class="the-cursor" onClick="javascript:location.href = 'index.html';">Home Page</h3>
         <h3 class="the-cursor" onClick="javascript:location.href = 'faculty.html';">Faculty</h3>
         <h3 class="the-cursor" onClick="javascript:location.href = 'resources.html';">Resources</h3>
+        <h3 class="the-cursor" onClick="javascript:location.href = 'apply.html';">Application</h3>
       </div>
       <div class="middle-container">
         <h2>We are currently supported by Kennesaw State University. Please contact the university for more information.</h2>
